# Euler-LanGraph-Agent

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  WORKFLOW_DOCUMENTATION.md  docker-compose.yml  pyproject.toml  test_integration.py  test_model_change.py
app/: __init__.py  main.py
app/agent/: __init__.py  state.py
app/agents/: __init__.py  chains.py  checkpointer.py  conditions.py  graph.py  interface.py  nodes.py  prompts.py  react_agent.py  state.py  state_utils.py  workflow_conditions.py
app/agents/core/: __init__.py  mathematical_reasoner.py  state_manager.py  tool_orchestrator.py
app/agents/workflow/: nodes.py
app/core/: __init__.py  agent_controller.py  base_classes.py  bigtool_setup.py  config.py  exceptions.py  health_check.py  logging.py  semantic_filter.py  tool_engine.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  agent_state.py  conversation.py
app/tools/: __init__.py  analysis_tool.py  base.py  initialization.py  integral_tool.py  langchain_tools.py  plot_tool.py  registry.py
app/ui/: __init__.py
app/ui/components/: __init__.py  chat.py  sidebar.py
app/ui/pages/: __init__.py  main_chat.py
app/ui/state/: __init__.py  session.py
app/ui/utils/: __init__.py  formatters.py  styling.py
app/utils/: __init__.py  robust_parser.py  validators.py
docker/: Dockerfile  entrypoint.sh  init.sql  jupyter_lab_config.py
notebooks/: 00_master_test_suite.ipynb  01_environment_test.ipynb  02_agent_core_test.ipynb  02_math_tools_test.ipynb  03_agent_test.ipynb  03_workflow_integration_test.ipynb  04_database_test.ipynb  05_bigtool_integration_test.ipynb  06_error_debugging.ipynb  07_performance_optimization.ipynb  README.md
scripts/: clean_notebook.py  docker.sh  test_workflow.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_factory.py
tests/integration/: test_api_protection.py  test_langgraph_workflow.py  test_unified_workflow.py
tests/unit/: test_config.py
tests/unit/test_agents/: __init__.py  test_chains.py  test_interface.py  test_nodes_unified.py  test_prompts.py  test_react_agent.py
tests/unit/test_core/: test_bigtool_setup.py  test_config.py
tests/unit/test_models/: __init__.py  test_agent_state.py
tests/unit/test_tools/: test_base_tools.py
